# rappor-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
client/: Cargo.toml  README.md
client/src/: encode.rs
decoder/: Cargo.toml  README.md  REGRESSION.md
decoder/src/: counting_bloom.rs  decode.rs  feature_matrix.rs  lasso.rs  lasso_glmnet.rs  lib.rs  linear.rs
server/: Cargo.toml  Dockerfile  README.md
server/src/: decode.rs  lasso.rs  main.rs
src/: client.rs  lib.rs  main.rs  utils.rs
wasm-client/: Cargo.toml
wasm-client/src/: lib.rs
wasm-client/www/: package.json
www/: index.html  index.js  package-lock.json  webpack.config.js
