[package]
name = "fuzzy-men"
version = "0.1.0"
authors = ["walterh <waltermwfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bloom = { git = "https://github.com/ywalterh/bloom-rs" }
rand = "0.7.3"

wasm-bindgen = "0.2"

console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"