[package]
name = "client"
version = "0.1.0"
authors = ["walterh <waltermwfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom = { git = "https://github.com/ywalterh/bloom-rs" }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }