[package]
name = "client"
version = "0.1.0"
authors = ["walterh <waltermwfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
byteorder = "1.3"
md5 = "0.7"
hex = "0.4"
hmac = "0.8"
sha2 = "0.9"
