[package]
name = "decoder"
version = "0.1.0"
authors = ["walterh <waltermwfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.1"

ndarray = "0.13"
ndarray-linalg = { git = "https://github.com/rust-ndarray/ndarray-linalg", features = ["openblas"]}
ndarray-rand = "0.11.0"

"blas" = "0.20"
"lapack" = "0.16"
openblas-src = "0.9"

client = { path = "../client" }
