[package]
name = "decoder"
version = "0.1.0"
authors = ["walterh <waltermwfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.1"

ndarray = "0.13"
ndarray-linalg = "0.12"
ndarray-rand = "0.11.0"
openblas-src = "0.9"
statrs = "0.12.0"
rayon = "1.3.1"

csv = "1.1"

client = { path = "../client" }
