[package]
name = "server"
version = "0.1.0"
authors = ["walterh <waltermwfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
bit-vec = "0.6.1"

ndarray = "0.13"
ndarray-linalg = { git = "https://github.com/rust-ndarray/ndarray-linalg", features = ["openblas"]}
ndarray-rand = "0.11.0"
