[package]
name = "fuzzy-men"
version = "0.1.0"
authors = ["walterh <waltermwfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
client = { path = "../client" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] } 
wasm-bindgen-futures = "0.4"

console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true}

reqwest = { version = "0.10", features = ["json"] }

[profile.release]
opt-level = "s"
